notebooks de scraping web modificados.

--- a/requirements.yml
+++ b/requirements.yml
@@ -25,6 +25,7 @@ dependencies:
     - pillow
     - plotly
     - PyMuPDF
+    - pyautogen[ollama]
     - pydot
     - python-docx
     - python-dotenv
